[package]
name = "kerosene"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[profile.release]
debug = "line-tables-only"

[dev-dependencies]
benchmark = { path = "crates/benchmark" }

[[bench]]
name = "receive"
harness = false

[[bench]]
name = "custom"
harness = false
